test-nginx/ingress/donggu-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donggu-ingress
  namespace: donggu-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.dorong9.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: donggu-nginx
              port:
                number: 80
