test-nginx/ingress/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.dorong9.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-nginx
              port:
                number: 80
